--- a/CashTransactionsApp/CashTransactionsApp.csproj
+++ b/CashTransactionsApp/CashTransactionsApp.csproj
@@ -12,6 +12,21 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -46,24 +61,66 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CreateForms\createEmployeeForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CreateForms\createEmployeeForm.Designer.cs">
+      <DependentUpon>createEmployeeForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CreateForms\createPositionForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CreateForms\createPositionForm.Designer.cs">
+      <DependentUpon>createPositionForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CreateForms\createServiceForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CreateForms\createServiceForm.Designer.cs">
+      <DependentUpon>createServiceForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="EditForms\editEmployeeForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditForms\editEmployeeForm.Designer.cs">
+      <DependentUpon>editEmployeeForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="EditForms\editPositionForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditForms\editPositionForm.Designer.cs">
+      <DependentUpon>editPositionForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="EditForms\editServiceForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditForms\editServiceForm.Designer.cs">
+      <DependentUpon>editServiceForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="mainForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="mainForm.Designer.cs">
       <DependentUpon>mainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="ManageForms\deleteForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ManageForms\deleteForm.Designer.cs">
+      <DependentUpon>deleteForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="requestForm.cs">
+    <Compile Include="ManageForms\requestForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="requestForm.Designer.cs">
+    <Compile Include="ManageForms\requestForm.Designer.cs">
       <DependentUpon>requestForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="switchForm.cs">
+    <Compile Include="ManageForms\switchForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="switchForm.Designer.cs">
+    <Compile Include="ManageForms\switchForm.Designer.cs">
       <DependentUpon>switchForm.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="mainForm.resx">
@@ -90,6 +147,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.7.2 %28x86 и x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Lib\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
