--- a/CashTransactionsApp/App.config
+++ b/CashTransactionsApp/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <connectionStrings>
-    <add name="cashTransDB" connectionString="Server=./sql2018;Database=cashTransDB;Trusted_Connection=True;" providerName="System.Data.SqlClient"/>
+    <add name="DefaultConnection" connectionString="Server=(localdb)\MSSQLLocalDB;Database=cashTransDB;Trusted_Connection=True;" providerName="Microsoft.Data.SqlClient"/>
   </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
